# StellarSwap

./: .gitignore  Cargo.toml  README.md  ci.sh  token-swap-liquidity-pool-master-prompt.md
.github/workflows/: ci.yml
contracts/lp_share/: Cargo.toml
contracts/lp_share/src/: lib.rs
contracts/lp_share/test_snapshots/tests/: test_double_initialize.1.json  test_mint_and_burn.1.json
contracts/pool/: Cargo.toml
contracts/pool/src/: lib.rs
contracts/pool/test_snapshots/tests/: test_add_liquidity_initial_price_and_shares.1.json  test_add_liquidity_subsequent_proportional.1.json  test_remove_liquidity_proportional.1.json  test_reserves_invariant_across_swaps.1.json  test_swap_constant_product_formula.1.json  test_swap_slippage_protection.1.json
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
contracts/token/test_snapshots/tests/: test_mint_and_balance.1.json  test_transfer.1.json
frontend/: .env.local  .env.local.example  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ActivityFeed.tsx  LiquidityPanel.tsx  PoolStats.tsx  SwapInterface.tsx  TransactionFeedback.tsx  TrustlineBanner.tsx  WalletConnect.tsx
frontend/src/hooks/: usePool.ts
frontend/src/lib/: contracts.ts  trustline.ts  wallet.ts
