[workspace]
members = [
    "contracts/token",
    "contracts/lp_share",
    "contracts/pool",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "21.7.6"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
