[package]
name = "pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
token    = { path = "../token",    features = ["testutils"] }
lp_share = { path = "../lp_share", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
